# kuzu

./: CMakeLists.txt
.github/workflows/: ci-ubuntu-20.04-lts-workflow.yml
dataset/rdf/taxonomy/: copy.cypher
dataset/rdf/tiny/: copy.cypher  schema.cypher
src/: CMakeLists.txt
src/binder/: binder.cpp
src/binder/bind/: bind_copy.cpp  bind_ddl.cpp  bind_file_scan.cpp  bind_graph_pattern.cpp  bind_reading_clause.cpp
src/binder/bind_expression/: bind_property_expression.cpp
src/catalog/: catalog_content.cpp
src/common/: CMakeLists.txt  table_type.cpp
src/common/copier_config/: copier_config.cpp
src/function/: vector_list_functions.cpp
src/include/binder/: binder.h  expression_binder.h
src/include/catalog/: catalog_content.h
src/include/common/: constants.h  table_type.h
src/include/optimizer/: filter_push_down_optimizer.h
src/main/: connection.cpp  database.cpp
src/optimizer/: filter_push_down_optimizer.cpp
src/processor/operator/persistent/reader/: CMakeLists.txt  base_csv_reader.cpp  column_reader.cpp  parallel_csv_reader.cpp  parquet_reader.cpp  rdf_reader.cpp  serial_csv_reader.cpp
src/processor/operator/persistent/reader/csv/: csv_reader.cpp
src/processor/operator/persistent/reader/parquet/: CMakeLists.txt  column_reader.cpp  list_column_reader.cpp  parquet_reader.cpp  string_column_reader.cpp  struct_column_reader.cpp
src/processor/operator/persistent/reader/rdf/: rdf_reader.cpp
src/storage/: local_table.cpp
test/runner/: e2e_ddl_test.cpp
test/storage/: CMakeLists.txt  compression_test.cpp
tools/rust_api/: build.rs
(+81 files in other folders)
